@@ -38,6 +38,7 @@ POSSIBILITY OF SUCH DAMAGE.
 */
 
 #include "system.h"
+#undef	__progname	/* XXX lose glibc baggage for now */
 /*@-readonlytrans@*/
 /*@unchecked@*/
 const char * __progname = "pcregrep";	/* XXX HACK in expected name. */
